Update pixi.toml to support linux-64 platform and add load_dotenv.sh script for environment variable management

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # pixi environments
-.pixi/*
-!.pixi/config.toml
-!.pixi/load_dotenv.sh
+# .pixi/*
+# !.pixi/config.toml
+# !.pixi/load_dotenv.sh
 .env
 data/
 .vscode/
 .ipynb_checkpoints/
 .DS_Store
+.github/
