--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["Joshua Sarasin <sarasinjj17@gmail.com>"]
 channels = ["conda-forge"]
 name = "kaggle-titanic"
-platforms = ["osx-arm64"]
+platforms = ["osx-arm64","linux-64"]
 version = "0.1.0"
 
 [tasks]
